--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,13 +4,14 @@ spring:
     username: postgres
     password: 'postgres'
     url: jdbc:postgresql://localhost:5432/notes_db
+
   jpa:
     properties:
       hibernate:
         format_sql: 'true'
     show-sql: 'true'
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 
