--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator</artifactId>
 			<version>0.30</version>
-		</dependency>5
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
